syntax = "proto3";

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

message FeedRequest {
  string username = 1;
}


// This responses will eventually be database.PostsResponse or at least use
// PostsEntry. Right now our builds don't allow for importing proto files
// between services. For that reason we'll keep it simple and ignore errors.
message Post {
  string global_id = 1;
  string author = 2;
  string title = 3;
  string body = 4;
  google.protobuf.Timestamp creation_datetime = 5;
}

message FeedResponse {
  repeated Post results = 1;
}

service Feed {
  rpc Get(FeedRequest) returns (FeedResponse);
  rpc GetAll(google.protobuf.Empty) returns (FeedResponse);
}
